legend component with placeholder images

--- a/app/components/Legend.scss
+++ b/app/components/Legend.scss
@@ -1,3 +1,13 @@
-.Legend {
+@import "../styles/Colours.scss";
 
+.legendContainer {
+  position: relative;
+}
+
+.importColumn {
+  position: relative;
+}
+
+.exportColumn {
+  position: relative;
 }
