--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -33,3 +33,16 @@
       url("fonts/FiraSansCondensed-SemiBold.ttf") format("truetype");
 }
 
+.theLegendHeading {
+  font-family: $fira-sans-condensed-medium;
+  font-size: 20px;
+  fill: $dark-grey;
+  text-align: center;
+}
+
+.theLegendValues {
+  font-family: $fira-sans-condensed;
+  font-size: 20px;
+  fill: $light-grey;
+  text-align: left;
+}
