removed legacy code and added text in map piece

--- a/app/components/MapPiece.scss
+++ b/app/components/MapPiece.scss
@@ -1,3 +1,5 @@
-.hexagonColor {
-	fill: #ede3cb;
+.mapPiece {
+	font-family: FiraSansCondensed-Regular;
+     font-size: 13px;
+     stroke: #666666;
 }
