legend values updated

--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -34,15 +34,15 @@
 }
 
 .theLegendHeading {
-  font-family: $fira-sans-condensed-medium;
-  font-size: 20px;
-  fill: $dark-grey;
+  font-family: $fira-sans-condensed;
+  font-size: 15px;
+  fill: #999999;
   text-align: center;
 }
 
 .theLegendValues {
   font-family: $fira-sans-condensed;
-  font-size: 20px;
-  fill: $light-grey;
+  font-size: 10px;
+  fill: #999999;
   text-align: left;
 }
