--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -46,3 +46,8 @@
   fill: $light-grey;
   text-align: left;
 }
+
+.showHideExplanations {
+  font-family: $fira-sans-condensed;
+  font-size: 14px;
+}
