--- a/app/components/ExplanationDot.scss
+++ b/app/components/ExplanationDot.scss
@@ -1,21 +1,19 @@
 
+
 .pulse {
   animation: pulse 3s ease-in-out infinite;
   opacity: 1.0;
   background: rgba(255, 112, 138, 0.9);
   box-shadow: 0 0 0 rgba(255, 112, 138, 0.5);
-}
-
-/* to make the circle */
-.circle {
   cursor: pointer;
-  border-radius: 25px;
+  border-radius: 10px;
   height: 15px;
   width: 15px;
   position: relative;
   display: inline-block;
-  text-align: center;
-  color: red;  
+
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
 }
 
 .pulse:hover {
