NEBV-777 Add DetailedSidebar and ChartOptions for linked scale in charts

--- a/app/styles/Colours.scss
+++ b/app/styles/Colours.scss
@@ -66,3 +66,17 @@ $accent: #fbb03b;
 
 $explanation: #ff708a;
 
+$NeutralWhite: rgb(255, 255, 255);
+$NeutralExtraLight: rgb(230, 230, 230);
+$NeutralLight: rgb(153, 153, 153);
+$NeutralMedium: rgb(102, 102, 102);
+$NeutralMediumDark: rgb(77, 77, 77);
+$NeutralDark: rgb(0, 0, 0);
+$SandLight: rgb(237, 227, 203);
+$SandMedium: rgb(211, 193, 152);
+$SandDark: rgb(182, 165, 126);
+$SandExtraDark: rgb(169, 147, 114);
+$ImportDefault: rgb(255,119,76);
+$ExportDefault: rgb(28,100,178);
+$Accent: rgb(251,176,59);
+$Explanation: rgb(255, 112, 138);
