--- a/app/styles/Common.scss
+++ b/app/styles/Common.scss
@@ -1,3 +1,46 @@
+@import "./Colours.scss";
+
 .SocialBar {
   cursor: pointer;
+}
+
+/* Based on https://codepen.io/AllThingsSmitty/pen/MmxxOz */
+.switch {
+  display: inline-block;
+  position: relative;
+  height: 20px;
+  width: 40px;
+  & input { display:none; }
+}
+
+.slider {
+  background-color: $SandExtraDark;
+  border: 1px solid $SandMedium;
+  cursor: pointer;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  transition: .4s;
+
+  &:before {
+    background-color: #fff;
+    content: "";
+    position: absolute;
+    transition: .4s;
+    width: 14px;
+    height: 14px;
+    left: 2px;
+    bottom: 2px;
+  }
+
+  &.round {
+    border-radius: 20px;
+    &:before { border-radius: 50%; }
+  }
+
+  input:checked + &:before {
+    transform: translateX(20px);
+  }
 }
