works on firefox

--- a/app/components/ExplanationDot.scss
+++ b/app/components/ExplanationDot.scss
@@ -1,8 +1,5 @@
 
-.front {
-  fill: fadeOut(#ff708a, 10);
-}
 .back {
   fill: transparent;
-  stroke: fadeOut(#ff708a, 20); 
+  stroke: fadeOut(#ff708a, 20px); 
 }
