render confidentiality label with no functionality

--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -84,3 +84,8 @@
   fill: $neutral-medium;
   text-align: left;
 }
+
+.showHideConfidentiality {
+  font-family: $fira-sans-condensed;
+  font-size: 14px;
+}
