--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -89,3 +89,15 @@
   font-family: $fira-sans-condensed;
   font-size: 14px;
 }
+
+.selectableDropdown {
+  font-family: $fira-sans-condensed-semibold;
+  fill: $neutral-medium;
+  font-size: 13px; 
+}
+
+.bodyText {
+  font-family: $fira-sans-condensed;
+  fill: $neutral-light;
+  font-size: 13px;
+}
