moved font css to common place

--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -46,3 +46,9 @@
   fill: $light-grey;
   text-align: left;
 }
+
+.mapPieceText {
+  font-family: FiraSansCondensed-Regular;
+     font-size: 13px;
+     stroke: #666666;
+}
