--- a/app/styles/Common.scss
+++ b/app/styles/Common.scss
@@ -44,3 +44,14 @@
     transform: translateX(20px);
   }
 }
+
+.detailBarArrow {
+  height: 20px;
+  width: 20px;
+  margin-right: -20px;
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg); 
+  -o-transform: rotate(180deg);  
+  -ms-transform: rotate(180deg);        
+  transform: rotate(180deg);  
+}
