Map Piece Explanation legends design

--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -94,3 +94,9 @@
   font-size: 13px;
   stroke: #666666;
 }
+
+.explanationLabel {
+  font-family: $fira-sans-condensed;
+  font-size: 13px;
+  stroke: #666666;
+}
