powerpool outline svg

--- a/app/components/ElectricityMapLayout.scss
+++ b/app/components/ElectricityMapLayout.scss
@@ -1,3 +1,10 @@
 .mappiece:hover {
 	cursor: pointer;
 }
+
+.powerPoolOutline{
+	fill:none;
+	stroke:#B8AB95;
+	stroke-width:0.9921;
+	stroke-miterlimit:10;
+}
