--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -100,6 +100,17 @@
   font-size: 13px; 
 }
 
+.visSelect {
+  font-family: $fira-sans-condensed-semibold;
+  font-size: 13px; 
+  fill: white;
+}
+
+.visSelectOfText {
+  font-family: $fira-sans-condensed;
+  font-size: 13px;
+}
+
 .bodyText {
   font-family: $fira-sans-condensed;
   fill: $neutral-light;
