wirefame design minor changes

--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -92,7 +92,7 @@
 .mapPieceText {
   font-family: $fira-sans-condensed;
   font-size: 13px;
-  fill: $neutral-medium;
+  fill: $neutral-light;
 }
 
 .timelineLabel {
@@ -113,5 +113,5 @@
 .explanationLabel {
   font-family: $fira-sans-condensed;
   font-size: 13px;
-  stroke: #666666;
+  fill: $neutral-light;
 }
