NEBV-802 First pass at Confidential Count sidebar

--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -102,26 +102,32 @@
   text-align: center;
 }
 
-.chartOptions a {
-  font-family: $fira-sans-condensed-medium;
-  color: $neutral-medium;
-  font-size: 14px;
-  text-decoration: none;
-  cursor: pointer;
-}
-
 .explanationLabel {
   font-family: $fira-sans-condensed;
   font-size: 13px;
   fill: $neutral-light;
 }
 
-.detailTotal {
+#detailSidebar {
   font-family: $fira-sans-condensed;
-  font-size: 12px;
-  color: $neutral-dark;
+  font-size: 11px;
+  color: $neutral-light;
 
-  .totalType {
-    font-family: $fira-sans-condensed-semibold;
+  .chartOptions a {
+    font-family: $fira-sans-condensed-medium;
+    color: $neutral-medium;
+    font-size: 14px;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  .detailTotal {
+    font-family: $fira-sans-condensed;
+    font-size: 12px;
+    color: $neutral-dark;
+
+    .totalType {
+      font-family: $fira-sans-condensed-semibold;
+    }
   }
 }
