popover lines and text componenets rendered. states created to handle changes in explanation dot when clicked

--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -115,3 +115,9 @@
   font-size: 13px;
   fill: $neutral-light;
 }
+
+.explanationText {
+  font-family: $fira-sans-condensed;
+  font-size: 11px;
+  color: $explanation;
+}
