--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -136,6 +136,14 @@
   fill: $neutral-light;
 }
 
+.imageDownloadHeading {
+  font-family: $fira-sans-condensed;
+  font-size: 18px;
+  color: $neutral-medium;
+  margin-left: 25px;
+  margin-top: 25px;
+}
+
 .detailBreakDown {
   .header{
     &.imports {
