--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -140,16 +140,18 @@
   font-family: $fira-sans-condensed;
   font-size: 22px;
   color: $neutral-medium;
-  margin-left: 25px;
-  margin-top: 25px;
 }
 
 .saveImage {
   font-family: $fira-sans-condensed;
   font-size: 18px;
   color: $neutral-medium;
-  margin-left: 25px;
-  margin-top: 395px;
+}
+
+.bitlyText {
+  font-family: $fira-sans-condensed;
+  fill: $neutral-light;
+  font-size: 13px;
 }
 
 .aboutHeading {
