--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -151,6 +151,13 @@
   margin-left: 25px;
 }
 
+.socialBarText {
+  font-family: $fira-sans-condensed;
+  font-size: 13px;
+  fill: $neutral-medium;
+  margin-left: 25px;
+}
+
 .aboutBodyText {
   font-family: $fira-sans-condensed;
   font-size: 11px;
