--- a/app/components/AboutWindow.scss
+++ b/app/components/AboutWindow.scss
@@ -1,10 +1,10 @@
 
 .aboutWindow {
   position:absolute;
-  right: 3%;
+  right: 11.6%;
   width:380px;
   height: auto;
-  top:10px;
+  top:34.5%;
   background-color: white;
   border: 1px solid rgba(0,0,0,0.15);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
