--- a/app/styles/Common.scss
+++ b/app/styles/Common.scss
@@ -76,3 +76,5 @@
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+:-moz-focusring { outline: 3px solid rgb(77, 144, 254); }
