--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -199,3 +199,13 @@
     }
   }
 }
+.paddArrowCanadaFonts{
+  font-family:$fira-sans-condensed;
+  font-size:15px;
+  fill:#666;
+}
+.paddArrowUSFonts{
+  font-family:$fira-sans-condensed;
+  font-size:15px;
+  fill:#666;
+}
