--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -209,3 +209,8 @@
   font-size:15px;
   fill:#666;
 }
+.explanationBottomText{
+  font-family:$fira-sans-condensed;
+  font-size:15px;
+  fill:#666;
+}
