NEBV-846 added legends map tile for the crude oil

--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -214,3 +214,8 @@
   font-size:15px;
   fill:#666;
 }
+.explanationTopText{
+  font-family:$fira-sans-condensed;
+  font-size:15px;
+  fill:#666;
+}
