word wrapping for the map pieces

--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -226,3 +226,8 @@
   font-size:15px;
   fill:#666;
 }
+.portLabel{
+  font-family: $fira-sans-condensed;
+  color: $neutral-medium;
+  font-size:9px;
+}
