skinned province names and positioning

--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -231,3 +231,9 @@
   color: $neutral-medium;
   font-size:9px;
 }
+
+.portProvinceLabel{
+  font-family: $fira-sans-condensed-semibold;
+  color: $neutral-medium;
+  font-size:21px;
+}
