drawing confidential popovers

--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -226,3 +226,8 @@
   font-size:15px;
   fill:#666;
 }
+.confidentialityText {
+  font-family:$fira-sans-condensed;
+  font-size: 11px;
+  color: #999;
+}
