--- a/app/components/Workspace.scss
+++ b/app/components/Workspace.scss
@@ -8,4 +8,5 @@ svg {
   pointer-events: auto;
   }
 }
-#popoverPortal > div > div { z-index: 9999; }
+#popoverPortal > div > div { z-index: 9999;
+cursor: pointer; }
