--- a/app/components/DataDownloadWindow.scss
+++ b/app/components/DataDownloadWindow.scss
@@ -1,8 +1,9 @@
 .dataDownloadWindow {
-  position:absolute;
-  width:380px;
+  position:fixed;
+  top: 20%;
+  left: 30%;
+  width:560px;
   height: auto;
-  top: 34.5%;
   background-color: white;
   border: 1px solid rgba(0,0,0,0.15);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -20,11 +21,17 @@
 
 .subtext {
   position: relative;
+  left: 15%;
   text-align: center;
   width: 65%;
-  // probably just with margin auto
+  padding-bottom: 20px;
 }
 
 .dataDownloadImage {
   cursor: pointer;
+  padding-bottom: 20px;
+  margin-left: 40%;
+  width: 150px;
+  height: auto;
+  top: 50%;
 }
