--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -120,6 +120,12 @@
 .mapPieceText {
   font-family: $fira-sans-condensed;
   font-size: 13px;
+  fill: $neutral-medium;
+}
+
+.powerPoolLabel {
+  font-family: $fira-sans-condensed;
+  font-size: 14px;
   fill: $neutral-light;
 }
 
@@ -158,7 +164,6 @@
   font-family: $fira-sans-condensed;
   fill: $neutral-light;
   font-size: 13px;
-
 }
 
 .aboutHeading {
