--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -245,30 +245,34 @@
 }
 .paddArrowCanadaFonts{
   font-family:$fira-sans-condensed;
-  font-size:15px;
+  font-size:13px;
   fill:#666;
 }
 .paddArrowUSFonts{
   font-family:$fira-sans-condensed;
-  font-size:15px;
+  font-size:13px;
   fill:#666;
 }
 .explanationBottomText{
   font-family:$fira-sans-condensed;
   font-size:15px;
-  fill:#666;
+  fill:#999;
 }
 .explanationTopText{
   font-family:$fira-sans-condensed;
   font-size:15px;
-  fill:#666;
+  fill:#999;
+}
+.paddMapPieceLabel {
+  font-family:$fira-sans-condensed;
+  font-size:12px;
+  fill:#fff;
 }
 .portLabel{
   font-family: $fira-sans-condensed;
   color: $neutral-medium;
   font-size:9px;
 }
-
 .portProvinceLabel{
   font-family: $fira-sans-condensed-semibold;
   color: $neutral-medium;
