--- a/app/components/ChartOptions.scss
+++ b/app/components/ChartOptions.scss
@@ -3,7 +3,7 @@
 /* Based on https://codepen.io/AllThingsSmitty/pen/MmxxOz */
 .switchWrapper {
   height: 100%;
-  margin: 0 0 0 10px;
+  margin: 0;
   padding: 0;
 
   img {
