detail sidebar skinning and constants value

--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -219,6 +219,10 @@
   }
   
 }
+.crudeOilTypeMode {
+  font-size: 12PX;
+  font-family: $fira-sans-condensed-semibold;
+}
 
 #detailSidebar {
   font-family: $fira-sans-condensed;
