--- a/app/components/ExplanationDot.scss
+++ b/app/components/ExplanationDot.scss
@@ -7,26 +7,26 @@
 @keyframes fadeOutDot { 
   from { 
     opacity: 1; 
-    r: 4.5; 
+    transform: scale(1);
   } to 
-  { opacity: 0; 
-    r: 15.5; 
+  { opacity: 0;  
+    transform: scale(3);
   } 
 }
 
 @keyframes expandDot { 
   from { 
-    r: 4.5; 
+    transform: scale(1);
   } to 
-  { 
-    r: 15.5;
+  {
+    transform: scale(1.5);
   } 
 }
 
 .explanationDot {
   cursor: pointer;
   .pulse {
-    animation: 1.5s ease-out 0s 2 normal fadeOutDot;
+    animation: 1.5s ease-out 0s infinite normal fadeOutDot;
   }
 }
 
