--- a/app/components/ExplanationDot.scss
+++ b/app/components/ExplanationDot.scss
@@ -26,7 +26,7 @@
 .explanationDot {
   cursor: pointer;
   .pulse {
-    animation: 1.5s ease-out 0s infinite normal fadeOutDot;
+    animation: 1.5s ease-out 0s 2 normal fadeOutDot;
   }
 }
 
