about modal positioned

--- a/app/components/AboutWindow.scss
+++ b/app/components/AboutWindow.scss
@@ -1,8 +1,9 @@
 .aboutWindow {
-  position:absolute;
-  width:380px;
+  position:fixed;
+  width:570px;
   height: auto;
-  top:34.5%;
+  top:10%;
+  left: 30%;
   background-color: white;
   border: 1px solid rgba(0,0,0,0.15);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
