Crude Oil: Label should have different colour depending on background of map piece

--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -123,6 +123,12 @@
   fill: $neutral-medium;
 }
 
+.mapPieceWhiteText {
+  font-family: $fira-sans-condensed;
+  font-size: 13px;
+  fill: $neutral-white;
+}
+
 .powerPoolLabel {
   font-family: $fira-sans-condensed;
   font-size: 14px;
