--- a/app/styles/Common.scss
+++ b/app/styles/Common.scss
@@ -4,6 +4,18 @@
   cursor: pointer;
 }
 
+.playButton {
+  cursor: pointer;
+}
+
+.mapPiece {
+  cursor: pointer;
+}
+
+.paddLayout {
+  cursor: pointer;
+}
+
 .loader {
   border: 16px solid #f3f3f3;
   border-radius: 50%;
