port selection name

--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -296,3 +296,9 @@
   color: $neutral-medium;
   font-size:16px;
 }
+
+.portName{
+  font-family: $fira-sans-condensed-semibold;
+  fill: $neutral-medium;
+  font-size: 60px;
+}
