NEBV-898 Imports/Exports total are vertically centered to barcharts

--- a/app/styles/Common.scss
+++ b/app/styles/Common.scss
@@ -45,3 +45,21 @@
 #popoverPortal {
   pointer-events: none;
 }
+
+.verticalAlign {
+  height: 100%;
+
+  &:before {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+    margin-right: -0.25em;
+  }
+
+  > .centered {
+    display: inline-block;
+    vertical-align: middle;
+    width: 100%;
+  }
+}
