--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -287,13 +287,13 @@
 }
 .portLabel{
   font-family: $fira-sans-condensed;
-  color: $neutral-medium;
+  fill: $neutral-medium;
   font-size:9px;
   text-anchor: middle;
 }
 .portProvinceLabel{
   font-family: $fira-sans-condensed-semibold;
-  color: $neutral-medium;
+  fill: $neutral-dark;
   font-size:16px;
 }
 
