NEBV-875 add image to imgdownload window

--- a/app/components/ImageDownloadWindow.scss
+++ b/app/components/ImageDownloadWindow.scss
@@ -1,5 +1,4 @@
 
-
 .imageDownloadWindow {
   position:absolute;
   top: 40%;
@@ -40,6 +39,14 @@
 .imageDownloadHeading {
   margin-left: 25px;
   margin-top: 25px;
+}
+
+.nebLogo {
+  position: absolute;
+  left: 60%;
+  height: auto;
+  width: 150px;
+  top: 85%;
 }
 
 .bitlyText {
