--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -170,7 +170,7 @@
 
 .bitlyText {
   font-family: $fira-sans-condensed;
-  fill: $neutral-light;
+  color: $neutral-light;
   font-size: 13px;
 }
 
