highlight provice name when selected

--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -302,3 +302,10 @@
   fill: $neutral-medium;
   font-size: 60px;
 }
+
+.provinceSelected{
+  fill: $sand-dark;
+}
+.provinceDeselected{
+  fill: $neutral-white;
+}
