--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -33,6 +33,10 @@
       url("fonts/FiraSansCondensed-SemiBold.ttf") format("truetype");
 }
 
+#reactRoot {
+  font-family: $fira-sans-condensed;
+  color: $neutral-medium;
+}
 
 .headingBase {
   font-family: $fira-sans-condensed-semibold;
