--- a/app/components/Menu.scss
+++ b/app/components/Menu.scss
@@ -10,7 +10,7 @@
   font-size: 13px;
   dominant-baseline: central;
 
-  .menuOption, .bold {
+  .menuOption, .uppercase {
     text-transform: uppercase;
   }
 }
