NEBV-896 added attributions to about window

--- a/app/components/AboutWindow.scss
+++ b/app/components/AboutWindow.scss
@@ -26,8 +26,13 @@
 
 .aboutBodyText {
   margin-top: -15px;
+  width: 90%;
 }
 
 .contributorsSection {
+  margin-top: -10px;
+}
+
+.attributionsSection {
   margin-top: -10px;
 }
