updated font color to lighter shade i.e. neutral-light

--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -274,7 +274,7 @@
 .mapPieceDescription{
   font-family:$fira-sans-condensed;
   font-size:13px;
-  fill:#666;
+  fill: $neutral-light;
 }
 .explanationBottomText{
   font-family:$fira-sans-condensed;
