focus bug on year/quarter; rpp confidentiatliy explanation positioning in safari

--- a/app/styles/Common.scss
+++ b/app/styles/Common.scss
@@ -35,7 +35,7 @@
   100% { transform: rotate(360deg); }
 }
 
-:focus { outline: 2px solid $explanation; }
+:focus, a:focus, a:active { outline: 2px solid $explanation; }
 #workspace { outline: none; }
 
 #popoverPortal {
