--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -69,6 +69,31 @@
   padding: 0;
 }
 
+.importsSubheading {
+  font-family: $fira-sans-condensed;
+  font-size: 12px;
+  color: $import-default;
+  margin: 0.0 0 0 3.75em;
+  padding: 0;
+  display: inline-block;
+}
+
+.importsSubheading a {
+  font-family: $fira-sans-condensed;
+  font-size: 12px;
+  color: $import-default;
+  padding: 0;
+  display: inline-block;
+}
+
+.importsSubheadingEnergy {
+  font-family: $fira-sans-condensed-semibold;
+  font-size: 12px;
+  color: $import-default;
+  padding: 0;
+  display: inline-block;
+}
+
 .resetLabel {
   font-family: $fira-sans-condensed;
   font-size: 13px;
