--- a/app/components/Header.scss
+++ b/app/components/Header.scss
@@ -8,7 +8,17 @@
 }
 
 .importsLink {
-  margin-top: -10px;
+  margin-top: -8px;
+}
+
+.crudeOilStats {
+  margin-top: -17px;
+  margin-left: 375px;
+}
+
+.refinedPetroleumProductsStats {
+  margin-top: -17px;
+  margin-left: 467px;
 }
 
 .metaBarBackground {
