remove link icon

--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -274,7 +274,7 @@
 .mapPieceDescription{
   font-family:$fira-sans-condensed;
   font-size:13px;
-  fill: $neutral-light;
+  fill: $neutral-medium;
 }
 .explanationBottomText{
   font-family:$fira-sans-condensed;
