--- a/app/styles/Common.scss
+++ b/app/styles/Common.scss
@@ -59,3 +59,11 @@
     width: 100%;
   }
 }
+
+/* Match what is in the WET template */
+*, :after, :before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+body { line-height: 1.4375; }
