--- a/app/components/ChartOptions.scss
+++ b/app/components/ChartOptions.scss
@@ -1,16 +1,22 @@
 @import "../styles/Colours.scss";
 
-.chartScaleLinked {
-  float: left;
+.chartOptionsWrapper {
   height: 100%;
-  margin-top: -156px;
+  > * {
+    position: absolute;
+    top: 0;
+  }
+}
+
+.chartScaleLinked {
+  left: 0;
+  height: 100%;
   > svg { margin: 0 4px 0 0; }
   > div { float: right; }
 }
 
 .chartOptions {
-  float: right;
-  margin-top: -155px;
+  right: 0;
   height: 100%;
 }
 
