--- a/app/components/DetailBreakDown.scss
+++ b/app/components/DetailBreakDown.scss
@@ -14,7 +14,7 @@
     margin-right: 20px;
     background: #fff;
   }
-  .progress-bar {
+  .percentage-bar {
     background-color: $sand-medium;
     width: 38px;
     position: relative;
@@ -23,7 +23,7 @@
     right: -7px;
   }
     
-  .progress-bar > span {
+  .percentage-bar > span {
     height: 12px;
     display: block;
   }
