--- a/app/styles/Common.scss
+++ b/app/styles/Common.scss
@@ -67,3 +67,5 @@
   box-sizing: border-box;
 }
 body { line-height: 1.4375; }
+table { border-collapse: collapse; border-spacing: 0; }
+td, th { padding: 0; }
