NEBV-914 Adjust size/positioning of outlier text

--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -343,3 +343,9 @@
 .provinceDeselected{
   fill: $neutral-white;
 }
+
+.chartOutlierText {
+  font-size: 13px;
+  font-family: "FiraSansCondensed", sans-serif;
+  fill: #666;
+}
