NEBV-914 Implement DetailTotal average and percentage of largest

--- a/app/components/DetailTotal.scss
+++ b/app/components/DetailTotal.scss
@@ -18,7 +18,7 @@
 
   &.imports {
     padding-top: 2px;
-    &, .percentage { 
+    &, .percentage, .percentage-bar > span {
           height: 12px; 
           line-height: 1; 
           background: $import-default; 
@@ -27,11 +27,27 @@
   }
   &.exports {
     padding-bottom: 15px;
-    &, .percentage { 
+    &, .percentage, .percentage-bar > span { 
           height: 12px; 
           line-height: 1;
           background: $export-default; 
         }
     .totalType { color: $export-default; }
   }
+
+  .detailBreakDownContainer {
+    width: 40px;
+    display: inline-block;
+    height: 13px;
+    overflow: visible;
+    vertical-align: top;
+    background: #fff;
+
+    .percentage-bar {
+      width: 40px;
+      right: auto;
+      margin-top: auto;
+    }
+  }
+	&.exports .detailBreakDownContainer .percentage-bar { margin-top: 1px; }
 }
