nebv-953 RPP colour changes and font changes applied

--- a/app/components/DetailBreakDown.scss
+++ b/app/components/DetailBreakDown.scss
@@ -13,6 +13,7 @@
     padding: 0 0 4px 2px;
     margin-right: 20px;
     background: #fff;
+    color: #666;
   }
   .percentage-bar {
     background-color: $sand-medium;
