--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -243,7 +243,7 @@
   }
   .detailBreakDownText {
     font-size: 13PX;
-    font-family: $fira-sans-condensed;
+    font-family: $fira-sans-condensed-semibold;
     color: $neutral-medium;
   }
   
