NEBV-953 detail breakdown text updates all viz

--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -231,25 +231,32 @@
 .detailBreakDown {
   .header{
     &.imports {
-      font-size: 14PX;
+      font-size: 14px;
       font-family: $fira-sans-condensed-semibold;
       color: $neutral-medium;
     }
     &.exports {
-      font-size: 14PX;
+      font-size: 14px;
       font-family: $fira-sans-condensed-semibold;
       color: $neutral-medium;
     }
   }
   .detailBreakDownText {
-    font-size: 13PX;
-    font-family: $fira-sans-condensed-semibold;
+    font-size: 13px;
+    font-family: $fira-sans-condensed;
     color: $neutral-medium;
   }
-  
+
 }
+
+.detailBolded {
+    font-family: $fira-sans-condensed-semibold;
+    font-size: 13px;
+  }
+
 .crudeOilTypeMode {
-  font-size: 12PX;
+  font-size: 14px;
+  color: #666;
   font-family: $fira-sans-condensed-semibold;
 }
 
