--- a/app/components/DetailTotal.scss
+++ b/app/components/DetailTotal.scss
@@ -18,7 +18,7 @@
 
   &.imports {
     padding-top: 2px;
-    &, .percentage, .percentage-bar > span {
+    &, .percentage {
           height: 12px; 
           line-height: 1; 
           background: $import-default; 
@@ -27,7 +27,7 @@
   }
   &.exports {
     padding-bottom: 15px;
-    &, .percentage, .percentage-bar > span { 
+    &, .percentage {
           height: 12px; 
           line-height: 1;
           background: $export-default; 
