--- a/app/components/ModalSelector.scss
+++ b/app/components/ModalSelector.scss
@@ -3,6 +3,12 @@ dialog {
   border: 1px solid rgba(0, 0, 0, 0.15);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
+  position: fixed;
+  top: 50%;
+  transform: translate(0, -50%);
+  max-height: 80%;
+  overflow: auto;
+
   .closeButton {
     width: 10px;
     position: absolute;
