--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -360,6 +360,7 @@
   fill: #666;
 }
 .loadingVisualization {
+  margin-top:18%;
   font-family: $fira-sans-condensed;
   font-size: 15px;
   color: rgb(102,102,102);
